--- a/WebL2/f1.html
+++ b/WebL2/f1.html
@@ -6,13 +6,13 @@
     <title>GREAT Website</title>
   </head>
   <body>
-    <h1>Hello Sir</h1>
+    <h1 id="mainHeading">Hello Sir</h1>
     <header>
       <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#aboutMe">AboutMe</a></li>
+        <ul  id="mainNavigition">
+          <li><h3><a href="#about">About</a></h3></li>
+          <li><h3><a href="#contact">Contact</a></h3></li>
+          <li><h3><a href="#aboutMe">About Me</a></h3></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +33,7 @@
           <input type="button" value="Submit" />
         </form>
       </section>
-      <section id="AboutMe">
+      <section id="aboutMe">
         <h2>Favourite Movies</h2>
         <ul>
           <li>Harry Potter</li>
@@ -41,7 +41,7 @@
           <li>Carry On Jatta</li>
         </ul>
         <h2>Honeymoon Trailer</h2>
-        <video controls width="550">
+        <video id="favouriteMovie" controls width="550">
           <source src="Honeymoon.mp4" type="video/mp4" />
 
           Download the
@@ -49,6 +49,7 @@
           video.
         </video>
         <iframe
+          id="youtubeVideo"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/26w8zdbgP2c?si=OJReqm0gNHLiPkcq"
@@ -69,7 +70,7 @@
         <p id="songLabel">Current Song: </p>
         <audio id="song" controls></audio>
 
-        <!-- JS code to handle the playback -->
+        <!-- JS Code to Handle the Playback and SongName-->
         <script>
          var song = document.getElementById('song');
          var tracks = ['song1.mp3', 'song2.mp3'];
@@ -85,7 +86,6 @@
           songLabel.textContent = 'Current Song: ' + tracks[currentTrack];
           song.play();
          })
-         song.play();
         </script>
       </section>
     </main>
