--- a/WebL2/f1.html
+++ b/WebL2/f1.html
@@ -36,6 +36,24 @@
           <input type="number" /><br />
           <label for="Message">Message</label><br />
           <textarea name="Message" id="Message"></textarea><br />
+          <iframe
+            width="520"
+            height="400"
+            frameborder="0"
+            scrolling="no"
+            marginheight="0"
+            marginwidth="0"
+            id="gmap_canvas"
+            src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Mr%20FT%20FAISALABAD+(Demo)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+          ></iframe>
+          <a href="https://www.privat-krankenversicherung-vergleich.at/"
+            >Krankenzusatzversicherung</a
+          >
+          <script
+            type="text/javascript"
+            src="https://embedmaps.com/google-maps-authorization/script.js?id=378103091dc87adced0ba7573a5b48913daadad0"
+          ></script>
+          <br />
           <input type="button" value="Submit" />
         </form>
       </section>
