--- a/WebL2/f1.html
+++ b/WebL2/f1.html
@@ -136,7 +136,7 @@
         <!-- JS Code to Handle the Playback and SongName-->
         <script>
           var song = document.getElementById("song");
-          var tracks = ["song1.mp3", "song2.mp3"];
+          var tracks = ["./song1.mp3", "./song2.mp3"];
           var currentTrack = 0;
           var songLabel = document.getElementById("songLabel");
 
