--- a/WebL2/f1.html
+++ b/WebL2/f1.html
@@ -131,12 +131,12 @@
         </ul>
         <!-- Audio Elements -->
         <p id="songLabel">Current Song:</p>
-        <audio id="song" controls></audio>
+        <audio id="song" src="Song1.mp3" controls></audio>
 
         <!-- JS Code to Handle the Playback and SongName-->
         <script>
           var song = document.getElementById("song");
-          var tracks = ["./song1.mp3", "./song2.mp3"];
+          var tracks = ["song1.mp3", "song2.mp3"];
           var currentTrack = 0;
           var songLabel = document.getElementById("songLabel");
 
