--- a/WebL2/f1.html
+++ b/WebL2/f1.html
@@ -105,10 +105,10 @@
         </ul>
         <h2>Honeymoon Trailer</h2>
         <video id="favouriteMovie" controls width="550">
-          <source src="Honeymoon.mp4" type="video/mp4" />
+          <source src="honeymoon.mp4" type="video/mp4" />
 
           Download the
-          <a href="Honeymoon.mp4">MP4</a>
+          <a href="honeymoon.mp4">MP4</a>
           video.
         </video>
         <iframe
@@ -131,7 +131,7 @@
         </ul>
         <!-- Audio Elements -->
         <p id="songLabel">Current Song:</p>
-        <audio id="song" src="Song1.mp3" controls></audio>
+        <audio id="song" controls></audio>
 
         <!-- JS Code to Handle the Playback and SongName-->
         <script>
